--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
 python:
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "nightly"
-# command to install dependencies
-#install: "pip install -r requirements.txt"
-# command to run tests
-script: nosetests
+  - 2.7
+  - 3.3
+  - nightly
+install:
+  - pip install pytest
+  - pip install coveralls
+script:
+  make test.report
+after_success:
+  coveralls
